--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <!-- <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" /> -->
+  <link rel="icon" type="image/svg+xml" href="/src/assets/images/header_images/icon-top-header.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <meta property="og:title" content="Nanny Share Host" />
+  <meta property="og:description" content="Hapu is Airbnb for nanny share. Share your home, nanny and costs and create new flexible, affordable solutions in childcare." />
+  <meta property="og:type" content="website" />
+  <meta name="description" content="Hapu is Airbnb for nanny share. Share your home, nanny and costs and create new flexible, affordable solutions in childcare.">
+  <title>Nanny Share Host</title>
 </head>
 
 <body>
